# Resolve-basketball-analysis

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: analysis-techniques.md  roboflow-pipeline-improvements.md
lut/: FX30.cube
src/: cli.py  config.py
src/analysis/: audio_analyzer.py  ball_tracker.py  color.py  event_classifier.py  object_detector.py  player_tracker.py  preview.py  scene_detector.py  video_analyzer.py
src/resolve/: export.py  highlights.py  markers.py
tests/: test_ball_tracker.py  test_clip_offsets.py  test_color.py  test_object_detector.py
