[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basketball-analyzer"
version = "0.1.0"
description = "Standalone basketball game video/audio analyzer with DaVinci Resolve integration"
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "scenedetect[opencv]>=0.6",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "deep-sort-realtime>=1.3",
    "filterpy>=1.4",
    "tqdm>=4.65",
    "setuptools<81",
]

[project.optional-dependencies]
pose = ["mediapipe>=0.10"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
basketball-analyze = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
